--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: max-content;
 }
 
 .container {
     background-color: #fff;
     padding: 20px;
+    padding-top: 50px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
+    height: max-content;
 }
 
 .input-group {
