--- a/styles.css
+++ b/styles.css
@@ -100,4 +100,72 @@ button:hover {
     display: flex;
 }
 
+#task1{
+    background-color: #fff;
+    padding: 20px;
+    padding-top: 50px;
+    margin-top: 50px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    height: max-content;
+   
+}
+h2{
+    padding-bottom: 10px;
+}
+#qw{
+    padding-bottom: 10px;
+}
+#qe{
+    margin-top: 10px; 
+}
 
+#task2{
+    background-color: #fff;
+    padding: 20px;
+    padding-top: 50px;
+    margin-top: 50px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    height: max-content; 
+}
+
+#task3{
+    background-color: #fff;
+    padding: 20px;
+    padding-top: 50px;
+    margin-top: 50px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    height: max-content; 
+}
+
+#task4{
+    background-color: #fff;
+    padding: 20px;
+    padding-top: 50px;
+    margin-top: 50px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    height: max-content; 
+}
+
+#task5{
+    background-color: #fff;
+    padding: 20px;
+    padding-top: 50px;
+    margin-top: 50px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    height: max-content; 
+}
